fix varios
