# routes/api/user.route.js
@@ -33,7 +33,7 @@ router.post("/altaempresaM", EmpresaController.createEmpresaM);
 router.get("/getempresas", EmpresaController.getEmpresas);
 router.put("/updateEmpresa", EmpresaController.updateEmpresa);
 router.put("/updateEmpresaM", EmpresaController.updateEmpresaM);
-router.post("/getEmpresaESTADO", EmpresaController.getEmpresaESTADO);
+router.post("/getEmpresaESTADOCUIT", EmpresaController.getEmpresaESTADOCUIT);
 router.post("/getEmpresaPAGO", EmpresaController.getEmpresaPAGO);
 router.post("/getEmpresaCUITEmpresa", EmpresaController.getEmpresaCUITEmpresa);
 router.post("/getEmpresasID", EmpresaController.getEmpresasID);
